Gtk-3.20&3.22&4.0: [Budgie-desktop] Fix truncated 'eject' button in PlacesApplet
We needed to override our default eject button spacing with specificity bump.

--- a/gtk/sass/3.20/_3rd-party.scss
+++ b/gtk/sass/3.20/_3rd-party.scss
@@ -1003,9 +1003,12 @@ window.budgie-popover.background frame.container > box.vertical {
         }
       }
 
-      button.unmount-button {
-        margin: rem(1.3px) rem(5.3px);
-        padding: rem(4px);
+      button.image-button.unmount-button {
+        &:not(.text-button) { // specificity bump for overriding our default
+                              // 'eject' button spacing
+          margin: rem(1.3px) rem(5.3px);
+          padding: rem(4px);
+        }
       }
     }
 
